--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link href="assets/css/slicknav.min.css" rel="stylesheet">
     <link href="assets/css/jquery.fancybox.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/mincss/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -278,7 +278,7 @@
 
                     <a href="shop-2.html" class="square">
                         <div class="slick_img"><img 
-                                src="https://d3n4pjass4bd0n.cloudfront.net/images/thumbnails/500/500/detailed/79/serious-mass-gainer-5-45-banan.jpg">
+                                src="./assets/images/Shop/unnamed.jpg">
                         </div>
                         <h6>Optimum Nutrition Serious</h6>
                         <div class="slick_text">Гейнер</div>
@@ -334,7 +334,7 @@
                     </a>
                     <a href="shop-9.html" class="square">
                         <div class="slick_img"><img  
-                                src="https://img6.hkrtcdn.com/7758/prd_775755-ON-Optimum-Nutrition-Micronized-Creatine-Powder-Unflavoured-0.66-lb_o.jpg">
+                                src="./assets/images/Shop/download.jpeg">
                         </div>
                         <h6>Creatine Powder
                         </h6>
@@ -542,7 +542,7 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img  src="https://avatars.mds.yandex.net/get-pdb/216365/287a3ca9-a6f8-459d-811c-3d71c05abc72/s1200 "
+                            <img  src="./assets/images/blog/girl_running_treadmill.jpg"
                                 >
                             <div class="blog-s-text">
                                 <div class="blog-content">
