--- a/shop-9.html
+++ b/shop-9.html
@@ -127,7 +127,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="https://img6.hkrtcdn.com/7758/prd_775755-ON-Optimum-Nutrition-Micronized-Creatine-Powder-Unflavoured-0.66-lb_o.jpg"
+                    <img src="./assets/images/Shop/download.jpeg"
                         class="imgShop">
                 </div>
                 <div class="col-md-8">
@@ -143,7 +143,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/images/Shop/usa.svg" class="flagShop">
+                            <img src="assets/images/Shop/usa.png" class="flagShop">
                             United States
                         </div>
                     </div>
