--- a/shop.html
+++ b/shop.html
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/images/Shop/usa.svg" class="flagShop">
+                            <img src="assets/images/Shop/usa.usa" class="flagShop">
                             United States
                         </div>
                     </div>
