--- a/shop-2.html
+++ b/shop-2.html
@@ -127,7 +127,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="https://d3n4pjass4bd0n.cloudfront.net/images/thumbnails/500/500/detailed/79/serious-mass-gainer-5-45-banan.jpg"
+                    <img src="./assets/images/Shop/unnamed.jpg"
                         class="imgShop">
                 </div>
                 <div class="col-md-8">
@@ -143,7 +143,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/images/Shop/usa.svg" class="flagShop">
+                            <img src="assets/images/Shop/usa.png" class="flagShop">
                             United States
                         </div>
                     </div>
